Fix list grid spacing issue

--- a/admin/broadleaf-open-admin-platform/src/main/resources/open_admin_style/css/admin/blc-admin.css
+++ b/admin/broadleaf-open-admin-platform/src/main/resources/open_admin_style/css/admin/blc-admin.css
@@ -991,10 +991,6 @@ i.listgrid-table-spinner {
     font-size: 20px;
 }
 
-.listgrid-container.single-listgrid span.listgrid-table-footer {
-	margin-bottom: 0;
-}
-
 span.listgrid-table-footer {
 	background-color: #EEE;
 	display: block;
